Chnages requested by Brian on the 19-02-2022

--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,14 @@ section {
 }
 
 .highlight {
+  font-family: lora-italic;
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .text {
+  font-family: lora-italic;
   margin-bottom: 20px;
 }
 
@@ -267,6 +269,21 @@ a.button {
   position: absolute;
   left: 10vw;
 }
+
+/*   */
+
+.operationalrealisation img {
+  height: 200px;
+}
+
+.operationalrealisation div.title, .operationalrealisation .subtitle, .operationalrealisation .highlight, .operationalrealisation .text {
+  text-align: center;
+}
+
+.designarchitecture div.title, .designarchitecture div.subtitle, .designarchitecture div.highlight, .designarchitecture div.text {
+  text-align: center;
+}
+
 
 /** Estimator **/ 
 
