Update estimator to latest version

--- a/css/estimator.css
+++ b/css/estimator.css
@@ -47,7 +47,8 @@
 #estimatorsection .v {
   font-size: 40px;
   /* text-align: center; */
-  color: var(--vred);
+  /* color: var(--vred); */
+  color: var(--vgrey);
   font-weight: bold;
 }
 
@@ -128,9 +129,9 @@
 
 #estimatorsection #usecases {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: auto;
   grid-template-rows: repeat(3, auto);
-  /* justify-items: center; */
+  justify-items: center;
   /* justify-content: center; */
   align-content: start;
 }
@@ -149,9 +150,11 @@
 #estimatorsection #overview {
   box-sizing: border-box;
   width: 100%;
-  padding: 15px;
-  border-radius: 5px;
-  background-color: var(--grey-light);
+  padding: 25px 15px;
+  border: 0.5px solid #cccccc;
+  border-radius: 15px;
+  display: grid;
+  align-content: center;
 }
 
 #estimatorsection #overview p {
@@ -169,21 +172,23 @@
   box-sizing: border-box;
   width: 100%;
   display: grid;
-  grid-template-columns: minmax(auto, 1fr) 1fr;
+  /* grid-template-columns: minmax(auto, 1fr) 1fr; */
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   justify-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+  justify-content: space-evenly;
   align-content: start;
   column-gap: 50px;
   row-gap: 45px;
 }
 
 #estimatorsection #welcome-note {
-  width: 90%;
-  /* max-width: 540px; */
-  max-width: 210px;
+  box-sizing: border-box;
+  width: 540px;
   font-size: 13px;
-  /* margin: 0 auto; */
+  margin-bottom: 30px;
+  padding: 15px 15px 15px 15px;
 }
 
 #estimatorsection .clickable:hover, #estimatorsection .button:hover {
@@ -547,7 +552,7 @@
   margin-left: 10px;
   color: #ffffff;
   position: relative;
-  top: -40.5px;
+  top: -42px;
 }
 
 #estimatorsection .loader {
@@ -626,7 +631,11 @@
   /* display: none; */
   opacity: 1;
   font-size: 13px;
-  margin-top: 30px;
+  margin-top: 26px;
+
+  padding: 15px;
+  border: 0.5px solid #cccccc;
+  border-radius: 15px;
 }
 
 #estimatorsection #reportviewer {
@@ -689,31 +698,31 @@
 
 /* For even smaller screens, put the savings display below the usecase selector, and so on. */
 /* This is the view for mobiles, or other small windows. */
-@media screen and (max-width: 670px) {
-#estimatorsection #estimator {
+@media screen and (max-width: 680px) {
+  #estimatorsection #estimator {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
     gap: 25px;
   }
 
-#estimatorsection .v {
+  #estimatorsection .v {
     font-size: 30px;
   }
 
-#estimatorsection #welcome-note {
+  #estimatorsection #welcome-note {
     max-width: 340px;
     margin: 0 auto 60px auto;
   }
 
-#estimatorsection .button-group {
+  #estimatorsection .button-group {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     margin-top: 25px;
   }
 
-#estimatorsection #u-nav {
+  #estimatorsection #u-nav {
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(3, auto);
@@ -721,14 +730,14 @@
     align-items: center;
   }
 
-#estimatorsection #mini-cases {
+  #estimatorsection #mini-cases {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: repeat(3, auto);
     /* justify-content: normal; */
   }
 
-#estimatorsection .mini-group {
+  #estimatorsection .mini-group {
     /* justify-self: start; */
     align-self: start;
     display: grid;
@@ -740,28 +749,28 @@
     gap: 2px;
   }
 
-#estimatorsection .arrow-buttons div {
+  #estimatorsection .arrow-buttons div {
     height: 25px;
     border-radius: 12.5px;
     min-width: 25px;
     padding: 0;
   }
 
-#estimatorsection #adder {
+  #estimatorsection #adder {
     width: 100%;
   }
 
-#estimatorsection .mob-b {
+  #estimatorsection .mob-b {
     display: block !important;
   }
-#estimatorsection .mob-g {
+  #estimatorsection .mob-g {
     display: grid !important;
   }
-#estimatorsection .mob-f {
+  #estimatorsection .mob-f {
     display: flex !important;
   }
 
-#estimatorsection .des-b, .des-g, .des-f {
+    #estimatorsection .des-b, .des-g, .des-f {
     display: none !important;
   }
 
