--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -148,7 +148,8 @@
     color: #092168;
     width: 80vw;
     max-width: 600px;
-    font-size: 2em;
+    font-size: 1.5em;
+    margin-top: 20px;
   }
 
   .intro .introdesc .navigation {
@@ -486,7 +487,8 @@
     color: #092168;
     width: 80vw;
     max-width: 600px;
-    font-size: 1.3em;
+    font-size: 1.2em;
+    margin-top: 20px;
   }
 
 }
@@ -537,7 +539,8 @@
     color: #092168;
     width: 80vw;
     max-width: 600px;
-    font-size: 3vw;
+    font-size: 2em;
+    margin-top: 20px;
   }
 
   .intro .introdesc .navigation {
@@ -933,7 +936,8 @@
     color: #092168;
     width: 80vw;
     max-width: 600px;
-    font-size: 2em;
+    font-size: 1.5em;
+    margin-top: 20px;
   }
 
   .intro .introdesc .navigation {
