--- a/css/estimator.css
+++ b/css/estimator.css
@@ -22,7 +22,7 @@
 }
 
 #estimatorsection {
-  font-family: century-gothic, sans-serif;
+  font-family: lora;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   color: #777777;
@@ -552,7 +552,7 @@
   margin-left: 10px;
   color: #ffffff;
   position: relative;
-  top: -42px;
+  top: -40.5px;
 }
 
 #estimatorsection .loader {
