--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ section {
 }
 
 .text {
-  font-family: lora-italic;
+  font-family: graphik-regular;
   margin-bottom: 20px;
   line-height: 24px;
 }
@@ -84,7 +84,7 @@ section {
 
 .button {
   font-family: graphik-regular;
-  font-size: 12px;
+  font-size: 16px;
   background-color: #092168;
   color: white;
   padding: 10px 20px;
@@ -155,6 +155,7 @@ a.button {
   border-radius: 20px;
   background-color: white;
   padding: 10px 30px;
+  margin: 0px 20px 0px 0px;
 }
 
 .intro .introdesc .navabout {
@@ -185,6 +186,19 @@ a.button {
   left: calc(100vw * 0.2);
   bottom: 10px;
 }
+
+/*
+.arrowdown::after {
+  content: "→";
+  background-color: #FFBA10;
+  border-color: black;
+  border-style: dotted;
+  position: absolute;
+  bottom: -30px;
+  left: -12px;
+}
+*/
+
 
 /** Intro Header Bar**/
 
@@ -485,8 +499,9 @@ video {
   resize: none;
   border: none; /* <-- This thing here */
   border: solid 1px none;
-  border-radius: 15px;
+  border-radius: 25px;
   margin-bottom: 50px;
+  font-size: 16px;
 }
 
 .operationalvaluerealisation {
@@ -562,9 +577,9 @@ video {
 .footer img {
   width: 100px;
   margin-top: -15px;
+  float: right;
 }
 .footer a {
-  padding-left: 20px;
   color: white;
 }
 
@@ -578,6 +593,7 @@ video {
   position: fixed;
   bottom: 40px;
   right: 40px;
+
 }
 
 /** Sales Deck **/
