--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -86,6 +86,11 @@
 @media only screen and (min-width: 0px) and (max-width: 768px) and (orientation: portrait) {
   /* Styles */
 
+  .title {
+    font-family: lora;
+    font-size: 2.5em;
+  }
+
   .content {
     display: flex;
     flex-direction: column;
@@ -154,7 +159,6 @@
 
   .intro .introdesc .navigation {
     font-family: graphik-regular;
-    width: 200px;
     height: 80px;
     display: flex;
     align-content: center;
@@ -942,7 +946,6 @@
 
   .intro .introdesc .navigation {
     font-family: graphik-regular;
-    width: 200px;
     height: 80px;
     display: flex;
     align-content: center;
