Update CO2 box background

--- a/css/estimator.css
+++ b/css/estimator.css
@@ -663,7 +663,7 @@
   opacity: 1;
   font-size: 13px;
   margin-top: 26px;
-
+  background-color: whitesmoke;
   padding: 15px;
   border: 0.5px solid #cccccc;
   border-radius: 15px;
