--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,9 @@ a.button {
 #section-5,
 #section-7,
 #section-9,
+#section-11,
+#section-13,
+#section-15,
 #solution,
 #democratization {
   background-color: rgba(227, 218, 203, 0.5);
