--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -1151,7 +1151,7 @@
     #section-11 .text,
     #section-11 .title,
     #section-11 .subtitle {
-        text-align: right;
+        text-align: left;
     }
 
     #section-2 .highlight,
